--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,17 +4,17 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Home"
+  name = "Main"
   url = "#about"
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "People"
+  url = "#people"
   weight = 20
 
 [[main]]
-  name = "Projects"
+  name = "Research"
   url = "#projects"
   weight = 30
 
@@ -24,9 +24,20 @@
   weight = 40
 
 [[main]]
+  name = "Teaching"
+  url = "#accomplishments"
+  weight = 50
+  
+[[main]]
+  name = "Data"
+  url = "#accomplishments"
+  weight = 60
+
+
+[[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
